# hdf5_ui

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: hdf5_ui.adoc  index.html
src/h5tui/: __init__.py  h5.py  hdf5_tui.py  hdf5_tui.tcss  plugin.py
src/plugins/hex/: __init__.py
src/plugins/image/: __init__.py
tests/data/: 20240425_IAS_N-FEE_SPW_04551.hdf5  20240425_IAS_N-FEE_SPW_04552.hdf5  20240425_IAS_N-FEE_SPW_04553.hdf5
