[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["h5tui*", "plugins*"]

[tool.setuptools.package-data]
h5tui = ["*.tcss"]

[project]
name = "h5ui"
version = "0.1.3"
dynamic = ["readme"]
description = "User interfaces for HDF5 inspection."
license = { text = "MIT" }
dependencies = [
    "textual",
    "textual-imageview",
    "h5py",
    "pillow",
    "natsort",
]

[project.optional-dependencies]
dev = ["textual-dev"]
rel = ["build", "twine"]

[project.entry-points."item.view"]
hex-view = 'plugins.hex:HexViewer'
image-view = 'plugins.image:ImageViewer'

[project.scripts]
h5tui = 'h5tui.hdf5_tui:main'

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
